// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> it changes size and color fill based on props 1`] = `
<svg
  height="25px"
  id="lightning-icon"
  viewBox="0 0 24 24"
  width="25px"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <path
    d="M8 24l3-9h-9l14-15-3 9h9l-14 15z"
    fill="#DDDDDD"
  />
</svg>
`;

exports[`<Icon /> it renders correct icon svg based on name prop 1`] = `
<svg
  height="100%"
  id="lightning-icon"
  viewBox="0 0 24 24"
  width="100%"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <path
    d="M8 24l3-9h-9l14-15-3 9h9l-14 15z"
    fill="#ffffff"
  />
</svg>
`;

exports[`<Icon /> it renders correct icon svg based on name prop 2`] = `
<svg
  height="100%"
  id="trash-icon"
  viewBox="0 0 24 24"
  width="100%"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <path
    d="M3 6v18h18v-18h-18zm5 14c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm5 0c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm5 0c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm4-18v2h-20v-2h5.711c.9 0 1.631-1.099 1.631-2h5.315c0 .901.73 2 1.631 2h5.712z"
    fill="#ffffff"
  />
</svg>
`;

exports[`<Icon /> it renders correct icon svg based on name prop 3`] = `
<svg
  height="100%"
  id="cross-icon"
  viewBox="0 0 24 24"
  width="100%"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <path
    d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
    fill="#ffffff"
  />
</svg>
`;
